# chip8

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  chip8.cpp  chip8.h  glad.c  graphics.cpp  graphics.h  main.cpp
src/: chip8.cpp  chip8.hpp  emulator.cpp  emulator.hpp  graphics.cpp  main.cpp  opcodes.cpp  opcodes.hpp  platform.cpp  platform.hpp
